; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Database.c_LiGetLicenseStatusStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Database.c_LiGetLicenseStatusStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"LICENSE_STATUS_OTHERERROR\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"LICENSE_STATUS_OK\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"LICENSE_STATUS_EXPIRED\00", align 1
@.str.3 = private unnamed_addr constant [23 x i8] c"LICENSE_STATUS_ID_DIFF\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"LICENSE_STATUS_DUP\00", align 1
@.str.5 = private unnamed_addr constant [28 x i8] c"LICENSE_STATUS_INSUFFICIENT\00", align 1
@.str.6 = private unnamed_addr constant [27 x i8] c"LICENSE_STATUS_COMPETITION\00", align 1
@.str.7 = private unnamed_addr constant [24 x i8] c"LICENSE_STATUS_NONSENSE\00", align 1
@.str.8 = private unnamed_addr constant [19 x i8] c"LICENSE_STATUS_CPU\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @LiGetLicenseStatusStr(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i32* @_UU(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  store i32* %4, i32** %3, align 8
  %5 = load i32, i32* %2, align 4
  switch i32 %5, label %22 [
    i32 128, label %6
    i32 132, label %8
    i32 131, label %10
    i32 133, label %12
    i32 130, label %14
    i32 135, label %16
    i32 129, label %18
    i32 134, label %20
  ]

6:                                                ; preds = %1
  %7 = call i32* @_UU(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  store i32* %7, i32** %3, align 8
  br label %22

8:                                                ; preds = %1
  %9 = call i32* @_UU(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  store i32* %9, i32** %3, align 8
  br label %22

10:                                               ; preds = %1
  %11 = call i32* @_UU(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0))
  store i32* %11, i32** %3, align 8
  br label %22

12:                                               ; preds = %1
  %13 = call i32* @_UU(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  store i32* %13, i32** %3, align 8
  br label %22

14:                                               ; preds = %1
  %15 = call i32* @_UU(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.5, i64 0, i64 0))
  store i32* %15, i32** %3, align 8
  br label %22

16:                                               ; preds = %1
  %17 = call i32* @_UU(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.6, i64 0, i64 0))
  store i32* %17, i32** %3, align 8
  br label %22

18:                                               ; preds = %1
  %19 = call i32* @_UU(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.7, i64 0, i64 0))
  store i32* %19, i32** %3, align 8
  br label %22

20:                                               ; preds = %1
  %21 = call i32* @_UU(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.8, i64 0, i64 0))
  store i32* %21, i32** %3, align 8
  br label %22

22:                                               ; preds = %1, %20, %18, %16, %14, %12, %10, %8, %6
  %23 = load i32*, i32** %3, align 8
  ret i32* %23
}

declare dso_local i32* @_UU(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
